public class Monster extends Entity{
    int loot;
    int xpReward;
    public Monster(String name, int xPosition, int yPosition) {
        super(name, xPosition, yPosition);
    }
}
